--- a/experiments/retwis/boki/config.json
+++ b/experiments/retwis/boki/config.json
@@ -20,7 +20,7 @@
         "bokiexp-storage-6": { "type": "c5d.2xlarge", "role": "worker", "mount_instance_storage": "nvme1n1", "labels": ["storage_node=true"] },
         "bokiexp-storage-7": { "type": "c5d.2xlarge", "role": "worker", "mount_instance_storage": "nvme1n1", "labels": ["storage_node=true"] },
         "bokiexp-storage-8": { "type": "c5d.2xlarge", "role": "worker", "mount_instance_storage": "nvme1n1", "labels": ["storage_node=true"] },
-        "bokiexp-client": { "type": "c5d.xlarge", "role": "client" }
+        "bokiexp-client": { "type": "c5d.9xlarge", "role": "client" }
     },
     "services": {
         "zookeeper": { "placement": "bokiexp-gateway" },
